--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="line"></div>
+  <!-- Line Element with data-cy for reliable Cypress selection -->
+  <div id="line" data-cy="line"></div>
 
   <script src="script.js"></script>
 </body>
