--- a/main.html
+++ b/main.html
@@ -4,12 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rotating Line</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      height: 100vh;
+      background-color: #ffffff;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #line {
+      width: 200px;
+      height: 2px;
+      background-color: #000000;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(0deg);
+      transform-origin: center;
+    }
+  </style>
 </head>
 <body>
-  <!-- Line Element with data-cy for reliable Cypress selection -->
   <div id="line" data-cy="line"></div>
 
-  <script src="script.js"></script>
+  <script>
+    const line = document.getElementById('line');
+    let angle = 0;
+
+    setInterval(() => {
+      angle += 2;
+      line.style.transform = `translate(-50%, -50%) rotate(${angle}deg)`;
+    }, 20);
+  </script>
 </body>
 </html>
